<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="vm" type="com.enigma.givetip.viewmodel.CalculatorViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingBottom="26dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main"
            tools:context=".view.MainActivity">
        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:id="@+id/input_layout_check_amount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/input_check_amount"
                      android:text="@={vm.inputCheckAmount}"
                      android:hint="@string/input_check_amount_hint"
                      android:inputType="numberDecimal"
                      android:selectAllOnFocus="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:id="@+id/input_layout_tip_percentage"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_check_amount"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/input_tip_percentage"
                      android:text="@={vm.inputTipPercentage}"
                      android:hint="@string/input_tip_percentage_hint"
                      android:inputType="number"
                      android:selectAllOnFocus="true"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:id="@+id/calculation_outputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_tip_percentage">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:textAlignment="center"
                        android:text="@{vm.outputCheckAmount}"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_amount"/>

                <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/bill_amount_label"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_amount_label"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:textAlignment="center"
                        android:text="@{vm.outputTipAmount}"
                        android:layout_height="wrap_content"
                        android:id="@+id/tip_amount"/>

                <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/tip_amount_label"
                        android:layout_height="wrap_content"
                        android:id="@+id/tip_amount_label"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:textAlignment="center"
                        android:text="@{vm.outputTotalDollarAmount}"
                        android:layout_height="wrap_content"
                        android:id="@+id/grand_total"/>

                <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/grand_total_label"
                        android:layout_height="wrap_content"
                        android:id="@+id/grand_total_label"/>
            </LinearLayout>
        </LinearLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/calculation_name"
                  android:layout_margin="8dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/calculation_outputs"
                  android:textAlignment="center"
                  android:text="@{vm.locationName}"
                  tools:text="AL Majara"/>
    </android.support.constraint.ConstraintLayout>
</layout>